--- a/style.css
+++ b/style.css
@@ -243,15 +243,23 @@ body.mobile-nav-active .menu-trigger span {
 .heading{
     margin-bottom: 50px;
 }
+.heading-right{
+
+}
 .heading h2 {
     text-transform: uppercase;
     font-size: 18px;
     font-family: 'Niramit', sans-serif;
     font-weight: 600;
     line-height: 30px;
+    float: right;
 }
 
 .heading .bg-black{
     background-color: #000;
     padding: 0 8px;
+}
+
+.g-mt-100{
+    margin-top: 150px;
 }
