--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ body.mobile-nav-active .menu-trigger span {
     Site Heading and Description
 ----------------------------------- */
 
-.site-tagline{
+.site-tagline, .cta h2{
     font-family: 'Niramit', sans-serif;
     font-weight: 700;
 }
@@ -262,4 +262,20 @@ body.mobile-nav-active .menu-trigger span {
 
 .g-mt-100{
     margin-top: 150px;
+}
+
+.pt-100{
+    padding-top: 100px;
+}
+.pb-100{
+    padding-bottom: 100px;
+}
+
+hr.divider {
+    border-top: 5px solid #000;
+}
+
+
+.ff-ssp{
+    font-family: 'Source Sans Pro', sans-serif;
 }
