--- a/style.css
+++ b/style.css
@@ -255,16 +255,20 @@ body.mobile-nav-active .menu-trigger span {
 }
 .heading h2 {
     text-transform: uppercase;
-    font-size: 18px;
+    font-size: 16px;
     font-family: 'Niramit', sans-serif;
     font-weight: 600;
-    line-height: 30px;
+    line-height: 25px;
     float: right;
 }
 
 .heading .bg-black{
     background-color: #000;
     padding: 0 8px;
+}
+
+.heading span.d-block {
+    padding-left: 8px;
 }
 
 .g-mt-100{
@@ -323,4 +327,16 @@ hr.divider {
     .clients-img {
         padding: 10px;
     }
+}
+.divider-section{
+    position: relative;
+}
+.line-top {
+    border-top: 4px solid;
+    position: absolute;
+    left: -33px;
+    top: -46px;
+    width: 235px;
+    height: 4px;
+    background: #000;
 }
